# piper

./: .gitignore  DESIGN.md  PIPER_INTEGRATION.md  build.gradle.kts  settings.gradle.kts
.github/workflows/: android.yml  build-piper-android.yml  emulator-test-arm.yml  emulator-test-x86.yml
app/: build.gradle.kts
app/src/androidTest/java/com/piperreader/: MainActivityTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/: test_ru.txt
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/piperreader/: MainActivity.kt  PiperTTS.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
